# JNI_OpenSSL

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  logdebug.h  myapplication.cpp  openssl_aes.cpp  openssl_aes.h  openssl_rsa.cpp  openssl_rsa.h  openssl_sha256.cpp  openssl_sha256.h  openssl_tdes.cpp  openssl_tdes.h  privatekey.txt  publickey.txt  tools_openssl.cpp  tools_openssl.h
app/src/main/java/com/example/myapplication/: MainActivity.java  Utils.java
app/src/main/res/layout/: fragment_first.xml  fragment_second.xml
app/src/main/res/navigation/: nav_graph.xml
gradle/wrapper/: gradle-wrapper.properties
